--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -16,3 +16,10 @@ starlette==0.38.5
 jinja2==3.1.4
 swagger-ui-bundle==0.0.9
 bcrypt==3.2.2
+
+# === Extraction / OCR PDF ===
+pypdf==5.0.1
+pdf2image==1.17.0
+pytesseract==0.3.10
+Pillow==10.4.0
+pymupdf==1.24.10
