Envoie par mail, correction upload/edit acte

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,14 @@ SECRET_KEY=change-me-please
 ADMIN_EMAIL=admin@local
 ADMIN_PASSWORD=admin123
 MAX_UPLOAD_MB=20
+
+# SMTP / Envoi d'e-mails (à adapter)
+SMTP_HOST=smtp.example.com  # ex: smtp.office365.com, smtp.ovh.net, smtp.mairie.fr…
+SMTP_PORT=587
+SMTP_USER=compte-smtp@example.com
+SMTP_PASSWORD=VOTRE_MOT_DE_PASSE_SMTP
+SMTP_FROM="Portail Actes <no-reply@example.fr>"
+SMTP_USE_TLS=true
+
+# URL publique du front (utilisée dans les liens envoyés par e-mail)
+PUBLIC_FRONT_BASE_URL=http://localhost:3000
