--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ SMTP_HOST=smtp.example.com  # ex: smtp.office365.com, smtp.ovh.net, smtp.mairie.
 SMTP_PORT=587
 SMTP_USER=compte-smtp@example.com
 SMTP_PASSWORD=VOTRE_MOT_DE_PASSE_SMTP
-SMTP_FROM="Portail Actes <no-reply@example.fr>"
+SMTP_FROM="Recueil des actes <no-reply@example.fr>"
 SMTP_USE_TLS=true
 
 # URL publique du front (utilisée dans les liens envoyés par e-mail)
